# efdata

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  CLAUDE.md  CNAME  Dockerfile  LICENSE  MIGRATION_TO_EFDATA.md  README.Docker.md  README.md  SECURITY.md  analyze_imbalance.py  circular_flow_audit_summary.md  circular_flow_requirements_matrix.md  clean_reset_rba_schemas.sql  csv_datasets_inventory.md  docker-compose.prod.yml  docker-compose.yml  econcell-monitor.service  logrotate-econcell  main.py  package.json  pyproject.toml  rba_circular_flow_dataset_mapping_analysis.md  rba_circular_flow_mapping_plan.md  rba_circular_flow_postgresql_ddl.sql  rba_pipeline_implementation.md  requirements.txt  run_dashboard.sh  run_expenditure_etl.py  run_f_series_etl.py  setup-services.sh  setup.py  setup_git_hooks.sh  simplified_schema_test.sql  test_ai_system.py  test_github_actions_locally.sh  test_pipeline_fixes.py  visualize_circular_flow.py
.githooks/: pre-push
.github/workflows/: data-freshness.yml  docker-build.yml
config/: ai_config.json
debug/: check_database_state.sql  diagnose_measurement_issues.sql  diagnostic_postgres_test.sql  fix_i1_measurements.sql  fix_missing_data_sources.sql  fix_unit_matching.sql  implement_multifrequency_architecture.sql  load_trade_components.sql  multifreq_final_test.sql  multifreq_phase1_foundation.sql  multifreq_phase2_views.sql  multifreq_phase3_alignment.sql  multifreq_phase4_circular_flow.sql  multifreq_phase5_volatility.sql  process_missing_components.py  rba_circular_flow_postgresql_ddl.sql  test_rba_pipeline.py
docs/: circular_flow_audit_report.md  index.html  robots.txt  validation_methodology_paper_outline.md  validation_methodology_working_paper_v1.md
estimates/: 2025_05_29_session_summary.md  ECONCELL_12MONTH_CAREER_TRANSITION_PLAN.md  ECONCELL_IMPLEMENTATION_GUIDE.md  ECONCELL_STRATEGIC_ROADMAP.md  ECONCELL_TECHNICAL_ARCHITECTURE.md  KGB_appraisal.md  PHASE_1_IMPLEMENTATION_STATUS.md  Resume-Kieran-Bicheno.md  URGENT_MONETIZATION_STRATEGY.md  abs_spider_testing_strategy.md  agent_based_trade_model_design.md  appraisal_1_tasks.md  circular-flow-validation-barriers.md  circular_flow_imbalance_resolution.md  circular_flow_infrastructure_deployment_scenarios.md  claude_code_estimates.md  claude_code_setup_guide.md  claude_preferences_revision_strategy.md  data_ingestion_completion_plan.md  data_mapping_ambiguities.md  deep_research_query_for_claude.md  github_actions_workflow_plan.md  github_security_analysis_repo_rebuild.md  ollama_models_to_use.txt  phase_4_f_series_implementation.md  production_database_strategy.md  rba_circular_flow_implementation_summary.md  rba_data_pipeline_audit_report.md  rba_pipeline_fix_report.md  research_result_circular_flow_implementations.md  search_for_extant_flow_models.md  self-reminder.md  streamlit_dashboard_implementation_plan.md  taxation_spider_design.md
frontend/: __init__.py  api.py  circular-flow.html  forex.html  liberation_day.html  tariff_infographic.html
service/: README.md  econcell-api.service  econcell-monitor.timer  econcell-scheduler.service  mindsdb-econcell-compose.yml  setup-mindsdb.sh
setup/: currencies.json  currency_table.sql  display_codes.py  exchange_table.sql  upload_currencies.py
site/: api.py  code_conv.json  definitions.py  forex.html  iso_code_integration_example.py  iso_code_matcher.py  tariff_infographic.html
src/: __init__.py  config.py
streamlit_app/: README.md  __init__.py  app.py  auth.py  database.py  requirements.txt  visualizations.py
(+75 files in other folders)
