[project]
name = "econcell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip>=25.1.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "pandas>=2.0.0",
    "scrapy>=2.11.0",
    "apscheduler>=3.10.4",
    "pytz>=2023.3",
    "fastapi[standard]>=0.115.12",
]
