[project]
name = "efdata"
version = "0.1.0"
description = "Economic Flow Data Integration Platform for Australian Economic Statistics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "pip>=25.1.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",  # For Excel file handling
    "scrapy>=2.11.0",
    "apscheduler>=3.10.4",
    "pytz>=2023.3",
    "fastapi[standard]>=0.115.12",
    
    # AI/ML dependencies
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "ollama>=0.2.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    
    # Data processing and analysis
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "arch>=6.2.0",
    "linearmodels>=5.3.0",
    
    # Time series analysis
    "prophet>=1.1.4",
    "sktime>=0.24.0",
    "tslearn>=0.6.0",
    "pmdarima>=2.0.0",
    
    # Visualization
    "plotly>=5.17.0",
    "altair>=5.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "bokeh>=3.2.0",
    
    # System monitoring
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    
    # Async and concurrency
    "asyncio-mqtt>=0.13.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    
    # Jupyter and notebooks
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "nbconvert>=7.0.0",
    
    # Database and caching
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "chromadb>=0.4.0",
    
    # Development and testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    
    # Documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    
    # Cellular automata and Monte Carlo
    "mesa>=2.1.0",
    "numba>=0.58.0",
    "cupy-cuda12x>=12.0.0",
    
    # Economic data sources
    "quandl>=3.7.0",
    "yfinance>=0.2.0",
    "fredapi>=0.5.0",
    
    # Network and web
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    
    # Optimization
    "cvxpy>=1.4.0",
    "pyomo>=6.6.0",
    
    # Memory management
    "memory-profiler>=0.61.0",
    "pympler>=0.9.0"
]

[project.optional-dependencies]
gpu = [
    "torch[cuda]>=2.0.0",
    "cupy-cuda12x>=12.0.0",
    "cuml>=23.10.0",
    "cugraph>=23.10.0"
]

dev = [
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "bandit>=1.7.0"
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
